# AutoGenesis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  HANDOFF.md  KNOWN_ISSUES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  release-please-config.json
.autogenesis/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/plans/: 2026-04-04-autogenesis-tui.md
docs/specs/: 2026-04-04-autogenesis-tui-design.md
docs/superpowers/plans/: 2026-03-17-autogenesis-v0.1.0.md  2026-03-18-codex-oauth-harness-plan.md  2026-03-18-twitter-tool-plan.md  2026-03-19-agent-employees-plan.md  2026-03-19-ceo-orchestrator-plan.md  2026-03-19-remaining-gaps-plan.md
docs/superpowers/specs/: 2026-03-17-autogenesis-design.md  2026-03-18-codex-oauth-harness-design.md  2026-03-18-twitter-tool-design.md  2026-03-19-agent-employees-design.md  2026-03-19-ceo-orchestrator-design.md
docs/wiki/: architecture.md  backend-walkthrough.md  ceo-orchestrator.md  cli-reference.md  config.md  cto-orientation-segment.md  employee-system.md  frontend-walkthrough.md  onboarding-calendar-invite.md  onboarding-orientation-invite.ics.tmpl  onboarding-orientation-notes-template.md  onboarding-orientation-runbook.md  onboarding-packet.md  onboarding-plan.md  security-audit.md  security-onboarding-module.md  status-report.md  troubleshooting.md  twitter-agent.md
prompts/: README.md  manifest.yaml
prompts/system/: constitution.yaml  core.yaml
prompts/tests/: hello_world.yaml
scripts/: dev-setup.sh
tests/: conftest.py
