[project]
name = "autogenesis"
version = "0.1.0"
description = "The token-efficient agent framework. CLI-first. Self-improving. Every token counts."
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "autogenesis-core",
    "autogenesis-tools",
    "autogenesis-tokens",
    "autogenesis-optimizer",
    "autogenesis-security",
    "autogenesis-mcp",
    "autogenesis-plugins",
    "autogenesis-cli",
    "autogenesis-twitter",
    "autogenesis-employees",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
autogenesis-core = { workspace = true }
autogenesis-tools = { workspace = true }
autogenesis-tokens = { workspace = true }
autogenesis-optimizer = { workspace = true }
autogenesis-security = { workspace = true }
autogenesis-mcp = { workspace = true }
autogenesis-plugins = { workspace = true }
autogenesis-cli = { workspace = true }
autogenesis-twitter = { workspace = true }
autogenesis-employees = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",
    "ANN1",
    "COM812",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D", "ANN", "PLR2004", "B017", "PT011", "ARG", "SLF001", "EM101", "TRY003", "ASYNC109", "INP001"]
"**/tests/**/*.py" = ["S101", "D", "ANN", "PLR2004", "B017", "PT011", "ARG", "SLF001", "EM101", "TRY003", "ASYNC109", "INP001"]
"**/tools/src/**/*.py" = ["ASYNC2"]  # pathlib/input in async is intentional for tool implementations
"**/tools/src/**/twitter_*.py" = ["PLC0415"]  # lazy imports avoid ImportError when autogenesis_twitter is not installed
"**/mcp_tool.py" = ["PLC0415"]  # lazy imports intentional
"**/mcp/**/*.py" = ["PLC0415"]  # lazy imports for MCP SDK
"**/cli/**/*.py" = ["FBT", "PLC0415", "TC002"]  # Typer requires bool args, lazy imports, and type-only imports used at runtime
"**/twitter/src/**/*.py" = ["ASYNC2"]
"**/employees/src/**/*.py" = ["ASYNC2"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = [
    "packages/core/src",
    "packages/tools/src",
    "packages/tokens/src",
    "packages/optimizer/src",
    "packages/security/src",
    "packages/mcp/src",
    "packages/plugins/src",
    "packages/cli/src",
    "packages/twitter/src",
    "packages/employees/src",
]
exclude = ["tests/", "packages/*/tests/"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests", "tests"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring real LLM API keys",
]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]
